# scaring-laws

./: .editorconfig  .gitignore  LICENSE  Makefile  README.md  clean.py  codex.sh  compute_alignment_dimension.py  compute_flip_probability.py  data_download  divert_megatron.sh  gradient_anomaly_callback.py  gradient_callback_env.sh  huanjing  index.html  megatron.sh  package-lock.json  package.json  pre-training.sh  pyproject.toml  script.js  styles.css  test.py  test_activation_gradients.py  train.sh
data/: laws.js
model/: __init__.py  scaletree_vit.py
src/scaring_laws/: __init__.py  __main__.py  cli.py
src/scaring_laws.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/scaring_laws/models/: scaletree.py
src/scaring_laws/module/: __init__.py
tests/: test_cli.py
web/: eslint.config.js  index.html  package.json  tsconfig.app.json
web/src/: App.tsx  styles.css  types.ts
web/src/data/: laws.ts
