[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "scaring-laws"
version = "0.1.0"
description = "Starter scaffold for the scaring-laws project."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
    { name = "zhangjinhao_bupt" }
]
dependencies = []

[project.scripts]
scaring-laws = "scaring_laws.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
